<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.thank_you_page.ThankYouFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#DAFFFB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_your_order"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_grand_total_in_usd_was"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="10" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <Button
        android:id="@+id/continueShoppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/continue_shopping"
        />

</LinearLayout>