<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.payment.PaymentFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#DAFFFB">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_credit_card_information"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:paddingTop="25dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:id="@+id/creditContainer">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/creditCardNumber"

            android:layout_width="match_parent"
            android:layout_marginEnd="15sp"
            android:layout_height="69dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50sp"
            android:hint="@string/credit_card_number"
            android:inputType="numberDecimal"
            android:maxLength="16"
            android:textAlignment="center"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:id="@+id/addressContainer">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/address"

            android:layout_width="match_parent"
            android:layout_marginEnd="15sp"
            android:layout_height="69dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50sp"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress"
            android:maxLength="16"
            android:textAlignment="center"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:id="@+id/cvvContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CVVNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="103dp"
            android:layout_height="59dp"
            android:layout_marginStart="25dp"
            android:hint="@string/cvv"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textAlignment="center"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:id="@+id/monthContainer">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/MonthNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="97dp"
        android:layout_height="57dp"
        android:layout_marginStart="25dp"
        android:hint="@string/month"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:id="@+id/yearContainer">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/YearNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="97dp"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:hint="@string/year"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:textAlignment="center"
        android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_purchase"
        android:textAllCaps="false"/>





</LinearLayout>